tests: configure surefire plugin and migrate/update unit tests